chore: 힙 덤프 설정 추가